--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Image Editor in JavaScript | CodingNepal</title>
+    <title>Quick Editor | Iwmvictor</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css">
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container disable">
-        <h2>Easy Image Editor</h2>
+        <h2>Quick Image Editor</h2>
         <div class="wrapper">
             <div class="editor-panel">
                 <div class="filter">
