--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Quick Editor | Iwmvictor</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Quick Image Editor | Iwmvictor</title>
+    <meta name="description" content="Quick Image Editor - Edit, filter, rotate, and enhance your images online with ease. Free, fast, and user-friendly image editing tool.">
+    <meta name="keywords" content="image editor, online image editor, photo editor, quick image editor, image filters, rotate image, enhance photo, edit images, free image editor, image editing tool">
+    <meta name="author" content="Iwmvictor">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-  </head>
+</head>
   <body>
     <div class="container disable">
         <h2>Quick Image Editor</h2>
